--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "yago-cms/faq",
     "authors": [
         {
-            "name": "Johan Gr\u00f6nberg",
+            "name": "Johan Grönberg",
             "email": "johan@formsmedjan.se"
         }
     ],
